--- a/polasburgers/pedidos/templates/pedidos/listar_pedidos.html
+++ b/polasburgers/pedidos/templates/pedidos/listar_pedidos.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}Mis Pedidos{% endblock %}
 {% block content %}
     <h2>Mis Pedidos</h2>
