--- a/polasburgers/static/css/style.css
+++ b/polasburgers/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Fuente moderna */
     margin: 0;
     padding: 0;
     background-color: #f8f9fa;
@@ -18,6 +18,49 @@ body {
 
 .content-wrap {
     flex: 1;
+}
+
+.content-wrap-home {
+    display: flex;
+}
+
+.sidebar {
+    width: 250px; /* Aumenta el ancho */
+    background-color: rgba(34, 40, 49, 0.9); /* Fondo oscuro con transparencia */
+    height: 100vh;
+    position: sticky;
+    top: 0;
+    left: 0;
+    padding: 30px; /* Aumenta el padding */
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3); /* Sombra para efecto flotante */
+    color: #fff; /* Texto blanco */
+}
+
+.sidebar-nav {
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar-nav li {
+    margin-bottom: 20px; /* Aumenta el margen */
+}
+
+.sidebar-nav a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease; /* Transición suave */
+}
+
+.sidebar-nav a:hover {
+    background-color: rgba(255, 255, 255, 0.1); /* Ligero cambio de color al pasar el ratón */
+}
+
+.main-content-home {
+    flex-grow: 1;
+    padding-left: 30px;
 }
 
 .container {
