--- a/polasburgers/pedidos/templates/pedidos/crear_pedido.html
+++ b/polasburgers/pedidos/templates/pedidos/crear_pedido.html
@@ -1,19 +1,16 @@
 {% extends 'base.html' %}
-{% load static %}
 {% load crispy_forms_tags %}
+
+{% block title %}Crear Pedido{% endblock %}
 
 {% block content %}
     <h2>Crear Pedido</h2>
-    {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
     <form method="post">
         {% csrf_token %}
+        <h3>Datos del Cliente</h3>
+        {{ cliente_form|crispy }}
+        <h3>Productos</h3>
         {{ item_form|crispy }}
-        <button type="submit">Agregar al Pedido</button>
+        <button type="submit" class="btn btn-primary">Agregar al Pedido</button>
     </form>
 {% endblock %}
