--- a/polasburgers/templates/sidebar.html
+++ b/polasburgers/templates/sidebar.html
@@ -1,6 +1,7 @@
 <div class="sidebar-content">
     <ul class="sidebar-nav">
-        <li><a href="{% url 'lista_productos' %}">Productos</a></li>
+        <li><a href="{% url 'lista_productos' %}">Menu</a></li>
+        <li><a href="{% url 'ver_carrito' %}">Carrito de Compras</a></li>
         <li><a href="{% url 'listar_pedidos' %}">Mis Pedidos</a></li>
         </ul>
 </div>
