--- a/polasburgers/templates/footer.html
+++ b/polasburgers/templates/footer.html
@@ -15,7 +15,7 @@
                 <h5>Enlaces Útiles</h5>
                 <ul class="list-unstyled">
                     <li><a href="{% url 'home' %}" class="text-white">Inicio</a></li>
-                    <li><a href="{% url 'lista_productos' %}" class="text-white">Menú</a></li>
+                    <li><a href="{% url 'listar_productos' %}" class="text-white">Menú</a></li>
                     <li><a href="{% url 'login' %}" class="text-white">Iniciar Sesión</a></li>
                     <li><a href="{% url 'register' %}" class="text-white">Registrarse</a></li>
                 </ul>
