--- a/polasburgers/templates/header.html
+++ b/polasburgers/templates/header.html
@@ -5,6 +5,6 @@
         <img src="{% static 'img/polasburgers.jpeg' %}" alt="Pola's Burgers" class="img-fluid" style="width: 300px;">
         <h1 class="display-4">¡Bienvenido a Pola's Burgers!</h1>
         <p class="lead">Las mejores hamburguesas de la ciudad, ahora a tu alcance.</p>
-        <a class="btn btn-primary btn-lg" href="{% url 'lista_productos' %}" role="button">Ver Nuestro Menú</a>
+        <a class="btn btn-primary btn-lg" href="{% url 'listar_productos' %}" role="button">Ver Nuestro Menú</a>
     </div>
 </header>
