--- a/polasburgers/templates/pedido_ahora_section.html
+++ b/polasburgers/templates/pedido_ahora_section.html
@@ -3,6 +3,6 @@
     <div class="container text-center">
         <h2>¡Haz tu Pedido Ahora!</h2>
         <p>Explora nuestro menú y realiza tu pedido en línea. ¡Te esperamos con el mejor sabor!</p>
-        <a class="btn btn-primary btn-lg" href="{% url 'lista_productos' %}" role="button">Ver Nuestro Menú</a>
+        <a class="btn btn-primary btn-lg" href="{% url 'listar_productos' %}" role="button">Ver Nuestro Menú</a>
     </div>
 </section>
