--- a/polasburgers/pedidos/templates/pedidos/listar_pedidos.html
+++ b/polasburgers/pedidos/templates/pedidos/listar_pedidos.html
@@ -2,28 +2,35 @@
 {% load static %}
 {% block title %}Mis Pedidos{% endblock %}
 {% block content %}
-    <h2>Mis Pedidos</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Fecha</th>
-                <th>Total</th>
-                <th>Estado</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for pedido in pedidos %}
-                <tr>
-                    <td>{{ pedido.id }}</td>
-                    <td>{{ pedido.fecha_pedido }}</td>
-                    <td>{{ pedido.total }}</td>
-                    <td>{{ pedido.estado }}</td>
-                    <td><a href="{% url 'detalle_pedido' pedido.id %}">Ver Detalle</a></td>
-                    <td><a href="{% url 'eliminar_pedido' pedido.id %}">Eliminar</a></td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+<h2>Mis Pedidos</h2>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li>{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+<table class="table">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Fecha</th>
+            <th>Total</th>
+            <th>Estado</th>
+            <th>Acciones</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for pedido in pedidos %}
+        <tr>
+            <td>{{ pedido.id }}</td>
+            <td>{{ pedido.fecha_pedido }}</td>
+            <td>{{ pedido.total }}</td>
+            <td>{{ pedido.estado }}</td>
+            <td><a href="{% url 'detalle_pedido' pedido.id %}">Ver Detalle</a></td>
+            <td><a href="{% url 'eliminar_pedido' pedido.id %}">Eliminar</a></td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
