--- a/polasburgers/static/css/style.css
+++ b/polasburgers/static/css/style.css
@@ -26,7 +26,7 @@ body {
 
 .sidebar {
     width: 250px; /* Aumenta el ancho */
-    background-color: rgba(34, 40, 49, 0.9); /* Fondo oscuro con transparencia */
+    background-color: rgba(226, 157, 30, 0.9); /* Fondo oscuro con transparencia */
     height: 100vh;
     position: sticky;
     top: 0;
@@ -47,7 +47,7 @@ body {
 
 .sidebar-nav a {
     display: block;
-    color: #fff;
+    color: #5e4141;
     text-decoration: none;
     padding: 10px 15px;
     border-radius: 5px;
